--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -102,6 +102,7 @@ const menuitems = [
       { title: "Maytag", path: "/brands/maytag/" },
       { title: "Viking", path: "/brands/viking-repair/" },
       { title: "Bosch", path: "/brands/bosch/" },
+      { title: "LG", path: "/brands/lg/" },
 
     ],
   },
