--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -414,7 +414,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
         <div class="content_job-prices" id="col-prices">
           <div class="desk_job-prices">
             <a href="/price-list/dryer-vent-installation-cost/"
-              ><p>Dryer vent installation cost*</p></a
+              ><p>Dryer vent installation cost</p></a
             >
             <p>
               Dryer drying slow, builds excessive lint, overheating, creates
@@ -430,7 +430,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
         <div class="content_job-prices">
           <div class="desk_job-prices">
             <a href="/price-list/dryer-vent-repair-cost/"
-              ><p>Dryer vent repair cost*</p></a
+              ><p>Dryer vent repair cost</p></a
             >
             <p>
               Dryer drying slow, builds excessive lint, overheating, creates
@@ -446,7 +446,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
         <div class="content_job-prices" id="col-prices">
           <div class="desk_job-prices">
             <a href="/price-list/dryer-idler-pulley-replacement-cost/"
-              ><p>Dryer idler pulley replacement cost*</p></a
+              ><p>Dryer idler pulley replacement cost</p></a
             >
             <p>LG dryer making scraping noise.</p>
           </div>
@@ -459,7 +459,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
         <div class="content_job-prices">
           <div class="desk_job-prices">
             <a href="/price-list/dryer-motor-replacement-cost/"
-              ><p>Dryer motor replacement cost*</p></a
+              ><p>Dryer motor replacement cost</p></a
             >
             <p>LG dryer powers on but won't start.</p>
           </div>
@@ -472,7 +472,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
         <div class="content_job-prices" id="col-prices">
           <div class="desk_job-prices">
             <a href="/price-list/dryer-igniter-replacement-cost/"
-              ><p>Dryer igniter replacement cost*</p></a
+              ><p>Dryer igniter replacement cost</p></a
             >
             <p>LG dryer not heating.</p>
           </div>
@@ -485,7 +485,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
         <div class="content_job-prices">
           <div class="desk_job-prices">
             <a href="/price-list/dryer-heating-element-replacement-cost/"
-              ><p>Dryer heating element replacement cost*</p></a
+              ><p>Dryer heating element replacement cost</p></a
             >
             <p>Dryer not drying.</p>
           </div>
@@ -498,7 +498,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
         <div class="content_job-prices" id="col-prices">
           <div class="desk_job-prices">
             <a href="/price-list/dryer-thermal-fuse-replacement-cost/"
-              ><p>Dryer thermal fuse replacement cost*</p></a
+              ><p>Dryer thermal fuse replacement cost</p></a
             >
             <p>Dryer not drying fully.</p>
           </div>
@@ -510,7 +510,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
 
         <div class="content_job-prices">
           <div class="desk_job-prices">
-            <a href="#"
+            <a href="/price-list/dryer-vent-repair-cost/"
               ><p>
                 Dryer vent cleaning / dryer duct cleaning / clean dryer exhaust
                 / clean out dryer vent / clothes dryer vent cleaning cost*
@@ -558,7 +558,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
 
         <div class="content_job-prices">
           <div class="desk_job-prices">
-            <a href="#"><p>Install dryer vent cost/ dryer vent hook up*</p></a>
+            <a href="/price-list/dryer-vent-repair-cost/"><p>Install dryer vent cost/ dryer vent hook up*</p></a>
           </div>
 
           <div class="money_job-prices">
@@ -568,7 +568,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
 
         <div class="content_job-prices" id="col-prices">
           <div class="desk_job-prices">
-            <a href="#"><p>Install dryer vent cost / hook up gas dryer*</p></a>
+            <a href="/price-list/dryer-vent-repair-cost/"><p>Install dryer vent cost / hook up gas dryer*</p></a>
           </div>
 
           <div class="money_job-prices">
@@ -725,7 +725,7 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
 
         <div class="content_job-prices content_job-prices-h-m" id="col-prices">
           <div class="desk_job-prices">
-            <a href="/price-list/dryer-idler-pulley-replacement-cost"
+            <a href="#"
               ><p>Dryer thermal fuse.</p></a
             >
           </div>
