--- a/src/pages/services/commercial-dryer-repair-los-angeles.astro
+++ b/src/pages/services/commercial-dryer-repair-los-angeles.astro
@@ -940,7 +940,7 @@ const title ="Best Commercial Dryer Repair Los Angeles & Nearby Areas";
               </div>
 
               <div class="logo-brand logo-bran-ph-10">
-                <a href="#">
+                <a href="/price-list/lg-dryer-repair-cost/">
                   <img
                     width="300px"
                     height="300px"
@@ -1052,7 +1052,7 @@ const title ="Best Commercial Dryer Repair Los Angeles & Nearby Areas";
               </div>
 
               <div class="desc-logo-brand logo-bran-d-10">
-                <h3><a href="#">LG Electronics</a></h3>
+                <h3><a href="/price-list/lg-dryer-repair-cost/">LG Electronics</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-11">
