--- a/src/pages/services/dryer-repair-los-angeles.astro
+++ b/src/pages/services/dryer-repair-los-angeles.astro
@@ -680,7 +680,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="logo-brand logo-bran-ph-2">
-                <a href="#">
+                <a href="/price-list/lg-dryer-repair-cost/">
                   <img
                     width="300px"
                     height="300px"
@@ -976,7 +976,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               </div>
 
               <div class="desc-logo-brand logo-bran-d-2">
-                <h3><a href="#">LG Electronics</a></h3>
+                <h3><a href="/price-list/lg-dryer-repair-cost/">LG Electronics</a></h3>
               </div>
 
               <div class="desc-logo-brand logo-bran-d-3">
