--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -12,10 +12,8 @@ import "@components/css-components/footer-cta.css";
 <div id="reviews">
   <!-- скрипт отзывов грузит страницу на 17кб -->
   <div class="feedback" id="feedbackReviews">
-    <ReviewsFull />
-    <h2>
-      Same Day Appliance Repair Reviews - Real Reviews From Real Customers
-    </h2>
+    <!-- <ReviewsFull /> -->
+    
 
     <!-- <script
       defer
