--- a/src/components/reviews.astro
+++ b/src/components/reviews.astro
@@ -5,13 +5,13 @@ import "@components/css-components/reviews.css";
 <div class="reviews reviews-header">
   <div class="reviews-content">
     <p>
-      <a href="#reviews" title="reviews">
+      <a href="/reviews-page/" title="reviews">
         Reviews ⭐⭐⭐⭐⭐ 5.0 (Google Rating) (Thumbtack Rating)
       </a>
     </p>
  
     <div class="header-licenses-foto">
-      <a href="#reviews">
+      <a href="/reviews-page/">
       <div>
         <img
           src="/images/same-day-appliance-repair-licensed-2.webp"
