--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -103,7 +103,12 @@ const menuitems = [
       { title: "Viking", path: "/brands/viking-repair/" },
       { title: "Bosch", path: "/brands/bosch/" },
       { title: "LG", path: "/brands/lg/" },
-
+      { title: "Samsung", path: "/brands/samsung-repair/" },
+      { title: "Whirlpool", path: "/brands/whirlpool-repair/" },
+      { title: "GE", path: "/brands/ge-repair/" },
+      { title: "Frigidaire", path: "/brands/frigidaire-repair/" },
+      { title: "Kenmore", path: "/brands/kenmore-repair/" },
+      { title: "Electrolux", path: "/brands/electrolux-repair/" },
     ],
   },
   
