--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -953,6 +953,7 @@ main {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    cursor: default;
 }
 
 .reviews-header a {
@@ -962,7 +963,7 @@ main {
     align-content: center;
 }
 
-.reviews-header:hover a {
+.reviews-header a:hover {
     color: #ca0913 !important;
 }
 
