--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -812,6 +812,7 @@ h1 {
     font-size: clamp(35px, 7vw, 60px);
     line-height: clamp(56px, 8vh, 60px);
     font-weight: 900;
+    text-shadow: 2.3px 2.3px 3.7px rgb(21 21 21);
 }
 
 
@@ -1112,6 +1113,7 @@ main {
 html {
     width: 100%;
     scroll-behavior: auto;
+    overflow-y: scroll;
     scroll-behavior: smooth;
     
     /* scrollbar-color: #ca0913 #000; для fiefox но со стрелками
