--- a/src/pages/reviews-page.astro
+++ b/src/pages/reviews-page.astro
@@ -17,12 +17,19 @@ const title ="Same Day Appliance Repair Reviews - LA & Nearby Areas";
  
   <main>
     <ReviewsFull />
+    ddgh
+    fgfgh
+    fgf
+    hgfg
+    <br>
+    bggng
+    gngngn
   </main>
 
 
 
 
 
-  
+
  
 <Cta />
