--- a/src/pages/brands/whirlpool/whirlpool-dryer-repair.astro
+++ b/src/pages/brands/whirlpool/whirlpool-dryer-repair.astro
@@ -22,7 +22,7 @@ const title ="Reliable Whirlpool Dryer Repair Los Angeles - Guaranteed Fix";
     <img
       width="600"
       height="600"
-      alt="Same Day Bosch Repair Los Angeles"
+      alt="Whirlpoor dryer repair"
       src="/images/dryer-repair-5.webp"
     />
     <Contactbtn />
