--- a/src/pages/brands/whirlpool/whirlpool-dryer-repair.astro
+++ b/src/pages/brands/whirlpool/whirlpool-dryer-repair.astro
@@ -23,7 +23,7 @@ const title ="Reliable Whirlpool Dryer Repair Los Angeles - Guaranteed Fix";
       width="600"
       height="600"
       alt="Whirlpoor dryer repair"
-      src="/images/dryer-repair-5.webp"
+      src="/images/dryer-repair/dryer-repair-5.webp"
     />
     <Contactbtn />
   </div>
