--- a/src/pages/price-list/freezer-repair-cost.astro
+++ b/src/pages/price-list/freezer-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -601,6 +602,438 @@ const title ="Freezer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
       </div>
     </div>
     <Btn />
+
+
+
+
+
+
+
+    <div class="page213-content" >
+      <div class="content__page-full-hed">
+        <div class="content__page-hed-h">
+          <h2>Cost to Repair a Freezer Depending on the Brand</h2>
+        </div>
+        <div class="content__page-hed-desc"></div>
+      </div>
+
+      <div class="content__page-full-desc">
+        <div class="content__page-desc">
+          <p>
+            The cost to repair a freezer can vary significantly depending on
+            the brand, as different brands may have varying levels of
+            complexity, availability of parts, and service options. Below,
+            I'll provide a brief overview of repair costs for some popular
+            freezer brands:
+          </p>
+
+          <h3>Whirlpool</h3>
+          <p>
+            Whirlpool is a well-known and widely respected brand in the
+            appliance industry. The cost to repair a Whirlpool freezer can
+            be relatively moderate, typically ranging from $100 to $400,
+            depending on the nature of the issue. Common problems such as a
+            faulty thermostat, defrost timer, or compressor can be addressed
+            by certified technicians, and parts are generally easy to
+            obtain. Whirlpool's extensive service network also helps keep
+            repair costs manageable.
+          </p>
+
+          <h3>Frigidaire</h3>
+          <p>
+            Frigidaire freezers are known for their reliability and
+            affordability. Repairing a Frigidaire freezer usually costs
+            between $120 and $350. The brand's freezers are designed with
+            user-friendliness in mind, which can make certain repairs
+            simpler and less time-consuming. Issues such as a malfunctioning
+            evaporator fan motor or a defective door seal are common and can
+            be fixed relatively easily. Frigidaire also offers good customer
+            support, which can further ease the repair process.
+          </p>
+
+          <h3>GE</h3>
+          <p>
+            GE freezers are popular for their durability and advanced
+            features. Repair costs for GE freezers can range from $150 to
+            $450, depending on the complexity of the problem. GE appliances
+            often incorporate sophisticated technology, which might
+            necessitate specialized knowledge for repairs, potentially
+            increasing labor costs. However, GE's extensive network of
+            certified technicians and readily available replacement parts
+            can help keep costs within a reasonable range.
+          </p>
+
+          <h3>Samsung</h3>
+          <p>
+            Samsung freezers are known for their innovative features and
+            sleek design. Repairing a Samsung freezer can be somewhat more
+            expensive, typically falling between $200 and $500. This is
+            partly due to the advanced technology and unique components used
+            in Samsung appliances, which may require specialized skills and
+            parts that are sometimes harder to source. Samsung's commitment
+            to quality and technology means that repairs might involve more
+            intricate work, contributing to the higher costs.
+          </p>
+
+          <h3>Kenmore</h3>
+          <p>
+            Kenmore, a brand often sold through Sears, offers a wide range
+            of freezer models. Repair costs for Kenmore freezers generally
+            fall between $130 and $400. Kenmore's freezers are typically
+            designed for durability and ease of maintenance, which can help
+            keep repair costs lower. Common issues like a broken defrost
+            heater or a faulty temperature sensor can usually be fixed
+            without significant expense. The availability of parts and the
+            brand's widespread service network also contribute to reasonable
+            repair costs.
+          </p>
+
+          <h3>LG</h3>
+          <p>
+            LG freezers are reputed for their high-tech features and energy
+            efficiency. Repairing an LG freezer can range from $180 to $500.
+            The advanced technology found in LG freezers, such as digital
+            controls and inverter compressors, can sometimes make repairs
+            more complex and expensive. However, LG's commitment to customer
+            service and the availability of genuine replacement parts help
+            ensure that repairs are both effective and relatively swift,
+            albeit at a potentially higher cost.
+          </p>
+
+          <p>
+            Repair costs can vary widely based on the specific issue,
+            location, and availability of parts and certified technicians.
+            It's always a good idea to get multiple quotes and consider the
+            age and condition of the freezer when deciding whether to repair
+            or replace it.
+          </p>
+        </div>
+      </div>
+
+      <div class="content__page-full-logo-brand">
+        <div class="ph-logo-brand">
+          <div class="logo-brand logo-bran-ph-1">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/whirlpool.webp"
+                alt="Whirlpool"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-2">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/frigidaire.webp"
+                alt="Frigidaire"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-3">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/GE-general-electric.webp"
+                alt="GE general electric"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-4">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/lg.webp"
+                alt="LG"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-5">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/maytag.webp"
+                alt="Maytag"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-6">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/kenmore.webp"
+                alt="Kenmore"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-7">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/samsung.webp"
+                alt="Samsung"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-8">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/amana.webp"
+                alt="Amana"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-9">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/electrolux.webp"
+                alt="Electrolux"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-10">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/magic-chef.webp"
+                alt="Magic Chef"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-11">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/danby.webp"
+                alt="Danby"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-12">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/sub-zero.webp"
+                alt="Sub Zero"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-13">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/viking.webp"
+                alt="Viking"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-14">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/fisher-paykel.webp"
+                alt="Fisher & Paykel"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-15">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/dacor.webp"
+                alt="Dacor"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-16">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/monogram.webp"
+                alt="Monogram"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-17">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/galanz.webp"
+                alt="Galanz"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-18">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/balancing.webp"
+                alt="Balancing"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-19">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/whynter.webp"
+                alt="Whynter"
+                loading="lazy"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="full-desc-logo-brand">
+          <p>Brands of Freezer we repair</p>
+
+          <div class="desc-logo-brand logo-bran-d-1">
+            <h3><a href="#">Whirlpool</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-2">
+            <h3><a href="#">Frigidaire</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-3">
+            <h3><a href="#">General Electric</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-4">
+            <h3><a href="#">LG Electronics</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-5">
+            <h3><a href="#">Maytag</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-6">
+            <h3><a href="#">Kenmore</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-7">
+            <h3><a href="#">Samsung</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-8">
+            <h3><a href="#">Amana</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-9">
+            <h3><a href="#">Electrolux</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-10">
+            <h3><a href="#">Magic Chef</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-11">
+            <h3><a href="#">Danby</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-12">
+            <h3><a href="#">Sub Zero</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-13">
+            <h3><a href="#">Viking</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-14">
+            <h3><a href="#">Fisher & Paykel</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-15">
+            <h3><a href="#">Dacor</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-16">
+            <h3><a href="#">Monogram</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-17">
+            <h3><a href="#">Galanz</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-18">
+            <h3><a href="#">Balancing</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-19">
+            <h3><a href="#">Whynter</a></h3>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <Btn />
+
+
+
+
+
+
+
+
+
+
 
     <div class="maintenance">
       <div class="head_pricing-policy head_pricing-policy_foto">
@@ -1736,3 +2169,4 @@ const title ="Freezer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
   </Container>
  
 <Cta />
+<LogoBrands />
