--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -809,6 +809,344 @@ main {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.content__page-full-logo-brand {
+  display: grid;
+  grid-template-columns: 1.5fr 0.5fr;
+  grid-template-rows: 1fr;
+}
+
+.content__page-desc p{
+margin: 0;
+}
+
+.ph-logo-brand {
+  display: grid;
+  grid-gap: 1.3em;
+  padding: 10px 12px 10px 12px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  overflow: hidden;
+}
+
+.logo-brand {
+  max-width: 150px;
+  min-width: 150px;
+  max-height: 150px;
+  min-height: 150px;
+  justify-self: center;
+  align-self: center;
+  padding: 13px;
+  margin: 5px;
+  display: grid;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0px 0px 11px 3px #87878738;
+  transition: all 0.3s ease-out;
+}
+
+.logo-brand:hover {
+  box-shadow: 0px 0px 17px 6px #87878738;
+  border-radius: 25%;
+}
+
+.logo-bran-ph-1:hover {
+  box-shadow: 0px 0px 17px 6px #87878738;
+  border-radius: 25%;
+}
+
+.logo-brand a {
+  max-width: 100%;
+  justify-self: center;
+  align-self: center;
+}
+
+.logo-brand img {
+  max-width: 100%;
+  justify-self: center;
+  align-self: center;
+  transform: scale(1, 1);
+  transition: all 0.3s ease-out;
+}
+
+.logo-brand:hover img {
+  transform: scale(1.1, 1.1);
+}
+
+.full-desc-logo-brand {
+  display: grid;
+}
+
+.full-desc-logo-brand p {
+  text-align: center;
+  font-size: clamp(18px, 4vw, 22px);
+  font-weight: 700;
+  text-shadow: var(--text-shadown-b-h3);
+}
+
+
+.desc-logo-brand {
+  width: 100%;
+  padding: 5px 5px;
+  justify-self: center;
+  align-self: center;
+  position: relative;
+}
+
+
+.desc-logo-brand {
+  position: relative;
+  margin-bottom: 3px;
+}
+
+.desc-logo-brand h3 {
+  font-weight: 500;
+  text-shadow: var(--text-shadown-b-h3);
+  font-size: clamp(16px, 4vw, 20px) !important;
+  position: relative;
+  margin-top: 0;
+}
+
+.desc-logo-brand a {
+  color: #000;
+  position: relative;
+}
+
+.desc-logo-brand a::before {
+  background-color: #ca0913;
+  display: block;
+  content: '';
+  bottom: 0;
+  height: 3px;
+  border-radius: 2px;
+  width: 0%;
+  position: absolute;
+  transition: 0.3s ease-out;
+}
+
+.desc-logo-brand a:hover::before {
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+/* скрипт иконок с брэндами */
+
+.logo-brand img {
+  box-shadow: none;
+}
+
+
+.logo-brand img.hovered {
+  transform: scale(1.1);
+}
+
+.logo-bran-ph-1.hovered,
+.logo-bran-ph-2.hovered,
+.logo-bran-ph-3.hovered,
+.logo-bran-ph-4.hovered,
+.logo-bran-ph-5.hovered,
+.logo-bran-ph-6.hovered,
+.logo-bran-ph-7.hovered,
+.logo-bran-ph-8.hovered,
+.logo-bran-ph-9.hovered,
+.logo-bran-ph-10.hovered,
+.logo-bran-ph-11.hovered,
+.logo-bran-ph-12.hovered,
+.logo-bran-ph-13.hovered,
+.logo-bran-ph-14.hovered,
+.logo-bran-ph-15.hovered,
+.logo-bran-ph-16.hovered,
+.logo-bran-ph-17.hovered,
+.logo-bran-ph-18.hovered,
+.logo-bran-ph-19.hovered,
+.logo-bran-ph-20.hovered,
+.logo-bran-ph-21.hovered,
+.logo-bran-ph-22.hovered,
+.logo-bran-ph-23.hovered,
+.logo-bran-ph-24.hovered,
+.logo-bran-ph-25.hovered,
+.logo-bran-ph-26.hovered,
+.logo-bran-ph-27.hovered,
+.logo-bran-ph-28.hovered,
+.logo-bran-ph-29.hovered,
+.logo-bran-ph-30.hovered {
+  box-shadow: 0px 0px 17px 6px #87878738;
+  border-radius: 25%;
+}
+
+.logo-bran-d-1 a,
+.logo-bran-d-2 a,
+.logo-bran-d-3 a,
+.logo-bran-d-4 a,
+.logo-bran-d-5 a,
+.logo-bran-d-6 a,
+.logo-bran-d-7 a,
+.logo-bran-d-8 a,
+.logo-bran-d-9 a,
+.logo-bran-d-10 a,
+.logo-bran-d-11 a,
+.logo-bran-d-12 a,
+.logo-bran-d-13 a,
+.logo-bran-d-14 a,
+.logo-bran-d-15 a,
+.logo-bran-d-16 a,
+.logo-bran-d-17 a,
+.logo-bran-d-18 a,
+.logo-bran-d-19 a,
+.logo-bran-d-20 a,
+.logo-bran-d-21 a,
+.logo-bran-d-22 a,
+.logo-bran-d-23 a,
+.logo-bran-d-24 a,
+.logo-bran-d-25 a,
+.logo-bran-d-26 a,
+.logo-bran-d-27 a,
+.logo-bran-d-28 a,
+.logo-bran-d-29 a,
+.logo-bran-d-30 a {
+  position: relative;
+  display: inline-block;
+}
+
+.logo-bran-d-1 a::before,
+.logo-bran-d-2 a::before,
+.logo-bran-d-3 a::before,
+.logo-bran-d-4 a::before,
+.logo-bran-d-5 a::before,
+.logo-bran-d-6 a::before,
+.logo-bran-d-7 a::before,
+.logo-bran-d-8 a::before,
+.logo-bran-d-9 a::before,
+.logo-bran-d-10 a::before,
+.logo-bran-d-11 a::before,
+.logo-bran-d-12 a::before,
+.logo-bran-d-13 a::before,
+.logo-bran-d-14 a::before,
+.logo-bran-d-15 a::before,
+.logo-bran-d-16 a::before,
+.logo-bran-d-17 a::before,
+.logo-bran-d-18 a::before,
+.logo-bran-d-19 a::before,
+.logo-bran-d-20 a::before,
+.logo-bran-d-21 a::before,
+.logo-bran-d-22 a::before,
+.logo-bran-d-23 a::before,
+.logo-bran-d-24 a::before,
+.logo-bran-d-25 a::before,
+.logo-bran-d-26 a::before,
+.logo-bran-d-27 a::before,
+.logo-bran-d-28 a::before,
+.logo-bran-d-29 a::before,
+.logo-bran-d-30 a::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  height: 3px;
+  width: 0;
+  background: #ca0913;
+  border-radius: 2px;
+  transition: width 0.3s;
+  margin-top: 15px;
+}
+
+.logo-bran-d-1 a.hovered::before,
+.logo-bran-d-2 a.hovered::before,
+.logo-bran-d-3 a.hovered::before,
+.logo-bran-d-4 a.hovered::before,
+.logo-bran-d-5 a.hovered::before,
+.logo-bran-d-6 a.hovered::before,
+.logo-bran-d-7 a.hovered::before,
+.logo-bran-d-8 a.hovered::before,
+.logo-bran-d-9 a.hovered::before,
+.logo-bran-d-10 a.hovered::before,
+.logo-bran-d-11 a.hovered::before,
+.logo-bran-d-12 a.hovered::before,
+.logo-bran-d-13 a.hovered::before,
+.logo-bran-d-14 a.hovered::before,
+.logo-bran-d-15 a.hovered::before,
+.logo-bran-d-16 a.hovered::before,
+.logo-bran-d-17 a.hovered::before,
+.logo-bran-d-18 a.hovered::before,
+.logo-bran-d-19 a.hovered::before,
+.logo-bran-d-20 a.hovered::before,
+.logo-bran-d-21 a.hovered::before,
+.logo-bran-d-22 a.hovered::before,
+.logo-bran-d-23 a.hovered::before,
+.logo-bran-d-24 a.hovered::before,
+.logo-bran-d-25 a.hovered::before,
+.logo-bran-d-26 a.hovered::before,
+.logo-bran-d-27 a.hovered::before,
+.logo-bran-d-28 a.hovered::before,
+.logo-bran-d-29 a.hovered::before,
+.logo-bran-d-30 a.hovered::before {
+  width: 100%;
+}
+
+
+@media (max-width: 1024px) {
+  .content__page-full-logo-brand {
+      grid-template-columns: 1fr;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .ph-logo-brand {
+      grid-gap: 1.2em;
+      grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+  }
+  .logo-brand {
+    max-width: 110px;
+    min-width: 110px;
+    max-height: 110px;
+    min-height: 110px;
+    padding: 10px;
+}
+}
+/* скрипт иконок с брэндами */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width:1440px) {
   .head_pricing-policy h2:nth-child(1) {
     margin: 6% 0% 0% 0%;
