--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -616,6 +617,471 @@ const title ="Refrigerator Repair Cost - Labor & Parts - Online Estimates";
       </div>
     </div>
     <Btn />
+
+
+
+
+
+
+
+    <div class="page213-content">
+      <div class="content__page-full-hed">
+        <div class="content__page-hed-h">
+          <h2>Cost to Repair a Refrigerator Depending on the Brand</h2>
+        </div>
+        <div class="content__page-hed-desc"></div>
+      </div>
+
+      <div class="content__page-full-desc">
+        <div class="content__page-desc">
+          <h3>Whirlpool</h3>
+          <p>
+            Whirlpool refrigerators are known for their reliability and wide
+            range of models, from basic to high-end. Repair costs for
+            Whirlpool refrigerators can vary significantly depending on the
+            specific model and the issue at hand. On average, homeowners
+            might expect to pay between <b>$150 to $400</b> for common repairs
+            such as replacing a thermostat, door gasket, or water filter. More
+            complex repairs, like compressor replacement, can be pricier, potentially
+            ranging from <b>$500 to $800</b>. Whirlpool's extensive network
+            of authorized repair technicians can sometimes help reduce costs
+            by ensuring that replacements and repairs use genuine parts,
+            thereby extending the lifespan of the appliance.
+          </p>
+
+          <h3>Samsung</h3>
+          <p>
+            Samsung refrigerators are renowned for their advanced technology
+            and sleek designs, often featuring digital displays, smart
+            capabilities, and multiple cooling zones. The cost to repair a
+            Samsung refrigerator can be on the higher side due to these
+            sophisticated features. Typical repair costs can range from <b
+              >$200 to $500</b
+            > for issues such as malfunctioning sensors, water dispensers, or
+            ice makers. More serious problems, like a faulty compressor, might
+            cost upwards of <b>$600 to $900</b>. Given the complexity of
+            Samsung's electronics, it's crucial to use certified repair
+            services to maintain the integrity of the appliance and ensure
+            accurate diagnostics.
+          </p>
+
+          <h3>LG</h3>
+          <p>
+            LG refrigerators are celebrated for their innovative designs and
+            energy efficiency. Repair costs for LG models can vary but
+            generally fall within a similar range to other high-tech brands.
+            Expect to pay between <b>$200 and $450</b> for common repairs like
+            fixing a defective evaporator fan or replacing a damaged door gasket.
+            If the problem involves the compressor or other critical cooling
+            system components, the cost can escalate to between <b
+              >$600 and $1,000</b
+            >. LG's use of proprietary technology often necessitates
+            specialized knowledge and parts, so it's advisable to seek out
+            authorized repair services to ensure quality repairs and
+            preserve warranty conditions.
+          </p>
+
+          <h3>GE</h3>
+          <p>
+            GE refrigerators are a staple in many homes, offering a balance
+            of affordability and functionality. Repair costs for GE models
+            are typically moderate, with common fixes such as replacing
+            thermostats, door seals, or water filters often costing between <b
+              >$150 and $350</b
+            >. For more intricate repairs, like those involving the
+            compressor or electronic control boards, costs can rise to
+            between <b>$400 and $700</b>. The availability of parts and the
+            widespread presence of GE-certified technicians can help keep
+            repair costs reasonable and turnaround times quick, making GE a
+            practical choice for many Home.
+          </p>
+
+          <h3>Maytag</h3>
+          <p>
+            Maytag refrigerators are known for their durability and
+            straightforward design, often resulting in lower repair costs
+            compared to more technologically advanced brands. Typical repair
+            expenses might range from <b>$150 to $300</b> for issues like a faulty
+            defrost timer or a broken door gasket. If more extensive repairs
+            are needed, such as replacing the compressor, costs can climb to
+            between <b>$500 and $750</b>. Maytag's reputation for
+            reliability means that serious issues are less common, but when
+            they do occur, the availability of parts and skilled technicians
+            can make repairs more affordable and efficient.
+          </p>
+
+          <h3>Frigidaire</h3>
+          <p>
+            Frigidaire refrigerators are popular for their affordability and
+            reliable performance. Repair costs for these models are
+            generally on the lower end of the spectrum, with common repairs
+            such as fixing a malfunctioning thermostat, replacing a water
+            filter, or repairing a door seal costing between <b
+              >$100 and $300</b
+            >. More complex repairs, like those involving the compressor or
+            electronic control systems, might range from <b>$400 to $700</b
+            >. Frigidaire's widespread availability and the ease of finding
+            replacement parts can help keep repair costs manageable, making
+            it a budget-friendly option for many consumers.
+          </p>
+
+          <h3>KitchenAid</h3>
+          <p>
+            KitchenAid refrigerators, known for their premium build quality
+            and stylish designs, can be more expensive to repair. Common
+            repairs, such as replacing a faulty water dispenser, fixing a
+            broken door seal, or addressing issues with the internal
+            lighting, can cost between <b>$200 and $500</b>. For more
+            serious problems, such as a malfunctioning compressor or
+            advanced electronic issues, repair costs can soar to between <b
+              >$600 and $1,200</b
+            >. Given the high-end nature of KitchenAid appliances, it's
+            often recommended to use certified repair technicians to ensure
+            that the repairs are done correctly and that the appliance
+            continues to perform at its best.
+          </p>
+        </div>
+      </div>
+
+      <div class="content__page-full-logo-brand">
+        <div class="ph-logo-brand">
+          <div class="logo-brand logo-bran-ph-1">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/whirlpool.webp"
+                alt="Whirlpool"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-2">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/samsung.webp"
+                alt="Samsung"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-3">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/lg.webp"
+                alt="LG"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-4">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/GE-general-electric.webp"
+                alt="General Electric"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-5">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/frigidaire.webp"
+                alt="Frigidaire"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-6">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/kenmore.webp"
+                alt="Kenmore"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-7">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/maytag.webp"
+                alt="Maytag"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-8">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/kitchenAid.webp"
+                alt="KitchenAid"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-9">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/sub-zero.webp"
+                alt="Sub-Zero"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-10">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/bosch.webp"
+                alt="Bosch"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-11">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/amana.webp"
+                alt="Amana"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-12">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/electrolux.webp"
+                alt="Electrolux"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-13">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/haier.webp"
+                alt="Haier"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-14">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/thermador.webp"
+                alt="Thermador"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-15">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/fisher-paykel.webp"
+                alt="Fisher & Paykel"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-16">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/jennAir.webp"
+                alt="Jenn-Air"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-17">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/viking.webp"
+                alt="Viking"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-18">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/hotpoint.webp"
+                alt="Hotpoint"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-19">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/magic-chef.webp"
+                alt="Magic Chef"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-20">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/dacor.webp"
+                alt="Dacor"
+                loading="lazy"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="full-desc-logo-brand">
+          <p>Brands of refrigerator we repair</p>
+
+          <div class="desc-logo-brand logo-bran-d-1">
+            <h3><a href="#">Whirlpool</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-2">
+            <h3><a href="#">Samsung</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-3">
+            <h3><a href="#">LG Electronics</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-4">
+            <h3><a href="#">General Electric</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-5">
+            <h3><a href="#">Frigidaire</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-6">
+            <h3><a href="#">Kenmore</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-7">
+            <h3><a href="#">Maytag</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-8">
+            <h3><a href="#">KitchenAid</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-9">
+            <h3><a href="#">Sub-Zero</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-10">
+            <h3><a href="#">Bosch</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-11">
+            <h3><a href="#">Amana</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-12">
+            <h3><a href="#">Electrolux</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-13">
+            <h3><a href="#">Haier</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-14">
+            <h3><a href="#">Thermador</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-15">
+            <h3><a href="#">Fisher & Paykel</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-16">
+            <h3><a href="#">Jenn-Air</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-17">
+            <h3><a href="#">Viking</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-18">
+            <h3><a href="#">Hotpoint</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-19">
+            <h3><a href="#">Magic Chef</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-20">
+            <h3><a href="#">Dacor</a></h3>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <Btn />
+
+
+
+
+
+
+
+
+
 
     <div class="maintenance">
       <div class="head_pricing-policy head_pricing-policy_foto">
@@ -1490,3 +1956,4 @@ const title ="Refrigerator Repair Cost - Labor & Parts - Online Estimates";
   </Container>
  
 <Cta />
+<LogoBrands />
